# yelp-ai-api-hack-2025

./: .gitignore  DOCKER.md  README.md  TESTING.md  docker-compose.dev.yml  docker-compose.yml  start.bat  start.sh
.claude/: settings.local.json
backend/: .dockerignore  .env.example  .gitignore  Dockerfile  agent.py  main.py  prompt.py  pyproject.toml  supabase_init.py  tools.py  yelp_init.py
backend/agent/: main.py  prompt.py  tools.py
backend/tests/: test_agent.py
frontend/: .dockerignore  Dockerfile  package-lock.json  package.json
frontend/src/: App.tsx  index.css
frontend/src/components/: Chatbox.tsx  Dashboard.tsx  ErrorBoundary.tsx  Login.tsx  Register.tsx
frontend/src/types/: user.types.ts  userMetadata.types.ts
